// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`panel-defaults — shape snapshots > DEFAULT_DISPLAY_STATE shape is stable 1`] = `
{
  "analysisOverlay": "off",
  "cableBundleMode": "auto",
  "cableFanAlpha": 0.9,
  "cableFanWidth": 2.5,
  "cableSpacing": 14,
  "cableTrunkAlpha": 0.25,
  "cableTrunkWidth": 12,
  "cardDisplayConfig": {
    "fields": [],
    "maxWidth": 120,
    "showIcon": false,
  },
  "cardinalityRules": [],
  "clusterLabelDetail": "standard",
  "colorEdgesByRelation": true,
  "customColorPalette": "",
  "definitionField": "",
  "donutDisplayConfig": {
    "innerRadius": 0.6,
  },
  "edgeBundleStrength": 0.65,
  "edgeCardinalityMode": "none",
  "edgeLabelPlacement": "center",
  "edgeLayerMode": false,
  "edgeWeightThickness": true,
  "fadeEdgesByDegree": false,
  "focusConeEnabled": true,
  "gridCellShading": false,
  "gridLabelPlacement": "on-line",
  "gridShowHeaders": false,
  "highContrastMode": false,
  "highlightPatterns": false,
  "hoverEdgeTypes": {
    "aggregation": true,
    "hasTag": false,
    "inheritance": true,
    "link": true,
    "semantic": false,
    "sequence": false,
    "sibling": false,
    "similar": false,
    "tag": false,
  },
  "hoverHighlightTypes": {
    "backlinks": true,
    "forwardLinks": true,
    "sameFolder": false,
    "sharedTags": false,
  },
  "hoverHops": 1,
  "hoverShowBody": false,
  "hoverShowMeta": true,
  "hoverShowTitle": true,
  "hoverTooltipFields": "",
  "importanceMetric": "degree",
  "nodeColorField": "",
  "nodeColorMode": "category",
  "nodeDisplayMode": "node",
  "nodeIconField": "",
  "nodeIconMap": {},
  "nodeShapeRules": [
    {
      "match": "isTag",
      "shape": "triangle",
    },
    {
      "match": "default",
      "shape": "circle",
    },
  ],
  "nodeSize": 20,
  "nodeSubLabelFields": "",
  "recencyDays": 7,
  "ringChartMode": false,
  "semanticZoom": false,
  "showAggregation": false,
  "showAncestryBreadcrumb": false,
  "showArrows": false,
  "showAxisTitles": true,
  "showBridgeNodes": false,
  "showCategoryEdges": false,
  "showClusterCompare": false,
  "showDotGrid": true,
  "showDurationBars": true,
  "showEdgeLabels": false,
  "showEntropyOverlay": false,
  "showGraphStats": false,
  "showHierarchyBreadcrumb": false,
  "showImportanceRing": false,
  "showInheritance": false,
  "showInlineRelation": false,
  "showLegend": true,
  "showLinks": true,
  "showMinimap": true,
  "showNamedRelation": false,
  "showNodeThumbnails": false,
  "showOntologyBackbone": false,
  "showOutOfBoundsIndicator": false,
  "showPathfinderOverlay": true,
  "showRecencyMarker": false,
  "showRelationMatrix": false,
  "showSemanticEdges": false,
  "showSequence": false,
  "showSibling": false,
  "showSimilar": false,
  "showSimilarSuggestions": false,
  "showStructureQuestions": false,
  "showTagBadges": false,
  "showTagEdges": false,
  "showTagNodes": true,
  "showTimelineRoutes": true,
  "showTimelineTickLabels": true,
  "tagDisplay": "enclosure",
  "textFadeThreshold": 0.5,
  "timelineEndKey": "end-date",
  "timelineKey": "date",
  "timelineOrderFields": "",
}
`;

exports[`panel-defaults — shape snapshots > DEFAULT_FILTER_STATE shape is stable 1`] = `
{
  "autoFitOnFilter": false,
  "commonQueries": [],
  "dataviewQuery": "",
  "edgeDirectionFilter": "all",
  "excludeNodes": [],
  "existingOnly": false,
  "expandedNodes": [],
  "groupFilter": "",
  "highlightMissingNeighbors": false,
  "includeTagsInData": true,
  "localGraphCenter": null,
  "localGraphHops": 2,
  "maxDegreeFilter": 0,
  "minDegreeFilter": 0,
  "multiSelectNodeIds": [],
  "orphanClusterField": "",
  "savedSearchQueries": [],
  "searchHistory": [],
  "searchMode": "filter",
  "searchQuery": "",
  "showAttachments": false,
  "showOrphans": true,
  "subgraphNodeIds": [],
  "subgraphStack": [],
  "timelineRangeMax": 1,
  "timelineRangeMin": 0,
}
`;

exports[`panel-defaults — shape snapshots > DEFAULT_LAYOUT_STATE shape is stable 1`] = `
{
  "autoFit": false,
  "centerForce": 0.03,
  "clusterArrangement": "inherit",
  "clusterFollowsGroupBy": true,
  "clusterGravity": {
    "interGroupAttraction": 0.5,
    "intraGroupDensity": 1,
  },
  "clusterGroupArrangement": "auto",
  "clusterGroupRules": [],
  "clusterGroupScale": 3,
  "clusterGroupSpacing": 2,
  "clusterNodeSpacing": 3,
  "collapsedGroups": Set {},
  "concentricMinRadius": 50,
  "concentricRadiusStep": 60,
  "coordinateLayout": null,
  "directionalGravityRules": [],
  "enclosureSpacing": 1.5,
  "focusLayout": false,
  "groupBy": "none",
  "groupByRules": null,
  "groupMinSize": 2,
  "groups": [],
  "linkDistance": 150,
  "linkForce": 0.01,
  "matrixSortMode": "degree",
  "nodeRules": [],
  "orbitAutoRotate": true,
  "pinnedPositions": {},
  "repelForce": 500,
  "showOrbitRings": true,
  "sortRules": [
    {
      "key": "degree",
      "order": "desc",
    },
  ],
  "viewMode": "graph",
}
`;

exports[`panel-defaults — shape snapshots > DEFAULT_TOOLBAR_STATE shape is stable 1`] = `
{
  "activeTab": "filter",
  "annotations": [],
  "bookmarkedNodes": [],
  "focusMode": false,
  "focusNodeId": null,
  "navHistory": [],
  "navHistoryCursor": -1,
  "presentationMode": false,
  "presetZoomLevel": 0,
  "savedViewports": [],
  "syncViewId": null,
  "syncWithEditor": true,
  "zoomSensitivity": 1,
}
`;

exports[`panel-defaults — shape snapshots > createDefaultPanelState shape is stable 1`] = `
{
  "activeTab": "filter",
  "analysisOverlay": "off",
  "annotations": [],
  "autoFit": false,
  "autoFitOnFilter": false,
  "bookmarkedNodes": [],
  "cableBundleMode": "auto",
  "cableFanAlpha": 0.9,
  "cableFanWidth": 2.5,
  "cableSpacing": 14,
  "cableTrunkAlpha": 0.25,
  "cableTrunkWidth": 12,
  "cardDisplayConfig": {
    "fields": [],
    "maxWidth": 120,
    "showIcon": false,
  },
  "cardinalityRules": [],
  "centerForce": 0.03,
  "clusterArrangement": "inherit",
  "clusterFollowsGroupBy": true,
  "clusterGravity": {
    "interGroupAttraction": 0.5,
    "intraGroupDensity": 1,
  },
  "clusterGroupArrangement": "auto",
  "clusterGroupRules": [],
  "clusterGroupScale": 3,
  "clusterGroupSpacing": 2,
  "clusterLabelDetail": "standard",
  "clusterNodeSpacing": 3,
  "collapsedGroups": Set {},
  "colorEdgesByRelation": true,
  "commonQueries": [],
  "concentricMinRadius": 50,
  "concentricRadiusStep": 60,
  "coordinateLayout": null,
  "customColorPalette": "",
  "dataviewQuery": "",
  "definitionField": "",
  "directionalGravityRules": [],
  "donutDisplayConfig": {
    "innerRadius": 0.6,
  },
  "edgeBundleStrength": 0.65,
  "edgeCardinalityMode": "none",
  "edgeDirectionFilter": "all",
  "edgeLabelPlacement": "center",
  "edgeLayerMode": false,
  "edgeWeightThickness": true,
  "enclosureSpacing": 1.5,
  "excludeNodes": [],
  "existingOnly": false,
  "expandedNodes": [],
  "fadeEdgesByDegree": false,
  "focusConeEnabled": true,
  "focusLayout": false,
  "focusMode": false,
  "focusNodeId": null,
  "gridCellShading": false,
  "gridLabelPlacement": "on-line",
  "gridShowHeaders": false,
  "groupBy": "none",
  "groupByRules": null,
  "groupFilter": "",
  "groupMinSize": 2,
  "groups": [],
  "highContrastMode": false,
  "highlightMissingNeighbors": false,
  "highlightPatterns": false,
  "hoverEdgeTypes": {
    "aggregation": true,
    "hasTag": false,
    "inheritance": true,
    "link": true,
    "semantic": false,
    "sequence": false,
    "sibling": false,
    "similar": false,
    "tag": false,
  },
  "hoverHighlightTypes": {
    "backlinks": true,
    "forwardLinks": true,
    "sameFolder": false,
    "sharedTags": false,
  },
  "hoverHops": 1,
  "hoverShowBody": false,
  "hoverShowMeta": true,
  "hoverShowTitle": true,
  "hoverTooltipFields": "",
  "importanceMetric": "degree",
  "includeTagsInData": true,
  "linkDistance": 150,
  "linkForce": 0.01,
  "localGraphCenter": null,
  "localGraphHops": 2,
  "matrixSortMode": "degree",
  "maxDegreeFilter": 0,
  "minDegreeFilter": 0,
  "multiSelectNodeIds": [],
  "navHistory": [],
  "navHistoryCursor": -1,
  "nodeColorField": "",
  "nodeColorMode": "category",
  "nodeDisplayMode": "node",
  "nodeIconField": "",
  "nodeIconMap": {},
  "nodeRules": [],
  "nodeShapeRules": [
    {
      "match": "isTag",
      "shape": "triangle",
    },
    {
      "match": "default",
      "shape": "circle",
    },
  ],
  "nodeSize": 20,
  "nodeSubLabelFields": "",
  "orbitAutoRotate": true,
  "orphanClusterField": "",
  "pinnedPositions": {},
  "presentationMode": false,
  "presetZoomLevel": 0,
  "recencyDays": 7,
  "repelForce": 500,
  "ringChartMode": false,
  "savedSearchQueries": [],
  "savedViewports": [],
  "searchHistory": [],
  "searchMode": "filter",
  "searchQuery": "",
  "semanticZoom": false,
  "showAggregation": false,
  "showAncestryBreadcrumb": false,
  "showArrows": false,
  "showAttachments": false,
  "showAxisTitles": true,
  "showBridgeNodes": false,
  "showCategoryEdges": false,
  "showClusterCompare": false,
  "showDotGrid": true,
  "showDurationBars": true,
  "showEdgeLabels": false,
  "showEntropyOverlay": false,
  "showGraphStats": false,
  "showHierarchyBreadcrumb": false,
  "showImportanceRing": false,
  "showInheritance": false,
  "showInlineRelation": false,
  "showLegend": true,
  "showLinks": true,
  "showMinimap": true,
  "showNamedRelation": false,
  "showNodeThumbnails": false,
  "showOntologyBackbone": false,
  "showOrbitRings": true,
  "showOrphans": true,
  "showOutOfBoundsIndicator": false,
  "showPathfinderOverlay": true,
  "showRecencyMarker": false,
  "showRelationMatrix": false,
  "showSemanticEdges": false,
  "showSequence": false,
  "showSibling": false,
  "showSimilar": false,
  "showSimilarSuggestions": false,
  "showStructureQuestions": false,
  "showTagBadges": false,
  "showTagEdges": false,
  "showTagNodes": true,
  "showTimelineRoutes": true,
  "showTimelineTickLabels": true,
  "sortRules": [
    {
      "key": "degree",
      "order": "desc",
    },
  ],
  "subgraphNodeIds": [],
  "subgraphStack": [],
  "syncViewId": null,
  "syncWithEditor": true,
  "tagDisplay": "enclosure",
  "textFadeThreshold": 0.5,
  "timelineEndKey": "end-date",
  "timelineKey": "date",
  "timelineOrderFields": "",
  "timelineRangeMax": 1,
  "timelineRangeMin": 0,
  "viewMode": "graph",
  "zoomSensitivity": 1,
}
`;
